[package]
name = "sleep-status"
description = "Suspends execution for a specified time while updating a progress bar."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["cargo"] }
humantime = "2.1.0"
indicatif = "0.17.7"
