[package]
name = "sleep-status"
version = "1.0.0"
authors = ["PhilboBaggins"]
edition = "2021"
description = "Suspends execution for a specified time while updating a progress bar."
repository = "https://github.com/PhilboBaggins/sleep-status"
license = "MIT OR Apache-2.0"
keywords = ["sleep", "progressbar", "cli", "terminal", "wait", "delay", "pause"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["cargo"] }
humantime = "2.1.0"
indicatif = "0.17.7"
